--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.Khalid"
         tools:targetApi="31">
         <activity
+            android:name=".Screens.Admin.AdminDashboardActivity"
+            android:exported="false" />
+        <activity
             android:name=".Screens.DashboardActivity"
             android:exported="false" />
         <activity
